# r3-tas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.c  common.h  config.hh  configuration.c  configuration.h  cpa.cc  cpa.hh  fetch-subtrees.sh  fileformat.cc  fileformat.hh  logging.c  main.c  main.cc  memory.cc  memory.h  memory.hh  r3-tas.lua  script.cc  script.hh  serialize.cc  serialize.hh  stream.h  structure.cc  structure.hh  types.cc  types.hh
common/: array.c  array.h  common.h  configuration.c  configuration.h  endianness.h  logging.c  logging.h  macrotricks.h  matrix4.h  memory.c  memory.h  stream.c  stream.h  vector2.h
common/console/: log.hh
common/math/: mathc.h  matrix3.h  matrix4.h  ray.h  vector2.h  vector3.h  vector4.h
common/type/: array.h
common/util/: macrotricks.h  opengl.h
game/: collision.lua  constants.hh  dynamics.lua  emulator.cc  emulator.hh  engine.h  fix.lua  game.cc  game.hh  global.c  global.h  graph.lua  interface.cc  interface.hh  ipo.lua  list.lua  log.hh  lvl.lua  perso.lua  physicalobject.lua  r3.lua  script.hh  standardgame.lua  structure.h  superobject.lua  tools.cc  tools.hh
game/ai/: ai.lua  behavior.c  behavior.h  brain.c  brain.h  dsg.c  dsg.lua  intelligence.h  interpreter.c  mind.c  mind.h  script.c  script.h  tables.h
game/collide/: collide.c  collide.h  material.c  material.h  mesh.c  mesh.h  octree.c
game/collision/: collision.lua
game/export/: dsg.c
game/global/: engine.c  engine.h  engine_timer.c  engine_timer.h  fix.c  fix.h  lvl.c  lvl.h  random.c  random.h  stdgame.c  superobject_links.c
game/graph/: graph.c  graph.h  graph.lua  graphnode.c  graphnode.h  msway.c  msway.h  waypoint.c  waypoint.h
game/interface/: bruteforce.cc  bruteforce.hh  bruteforce2.cc  bruteforce2.hh  cheats.c  cheats.cc  cheats.h  cheats.hh  collision.cc  collision.hh  debugger.cc  debugger.hh  emulator.cc  emulator.hh  export.c  export.h  game.c  game.cc  game.h  game.hh  hook.cc  hook.hh  interface.cc  interface.hh  intfun.c  intfun.h  lvl.h  optimize.cc  route.c  route.h  route.hh  script.cc  script.hh  serialize.cc  serialize.hh
game/interface/analyse/: analyse.c  analyse.h  geometry.c  geometry.h
game/interface/export/: dsg.c  dsg.cc
game/interface/geometry/: collision.cc  geometry.cc  geometry.hh  solver.cc  solver.hh
game/interface/xray/: xray.c  xray.cc  xray.h  xray.hh
game/math/: matrix3.c  ray.c  transform.c  vector2.c  vector4.c
game/object/: actor.c  actor.h  dynamics.h  dynamics.lua  ipo.lua  light.lua  perso.lua  physical_object.c  physicalobject.lua  standardgame.lua  stdgame.c  stdgame.h  superobject.c  superobject.h  superobject.lua  superobject_links.h  transform.c  transform.h
game/predict/: movement.h  predict.c
game/script/: translate2.h
graphics/: camera.c  camera.h  glmesh.c  glmesh.h  graphics.c  graphics.h  gui.cc  gui.h  mesh.c  mesh.h  vertex.h
graphics/display/: dsg.cc  rng.cc
graphics/gui/: ai.cc  bits.cc  boat.cc  dsg.cc  dynamics.cc  geometry-display.cc  gui.cc  gui.h  hierarchy.cc  inputstructure.cc  joypad.cc  object-types.cc  recording-tool.cc  rng.cc  route.cc  script.cc  superobject-actions.cc  superobject.cc  type.cc
graphics/gui/imgui/backends/: imgui_impl_android.cpp  imgui_impl_win32.cpp
graphics/metal/: main.metal  metal.mm  shadertypes.h
graphics/opengl/: graphics2.c
imgui/: imconfig.h
lib/: config.lua  console.lua  memory.lua  stream.lua
predict/: movement.c  movement.h  predict.c  predict.h
structure/ai/: behavior.c  brain.c  dsg.c  dsg.h  intelligence.c  interpreter.h  mind.c  mind.h  script.c  script.h
structure/collide/: collide.c  collide.h  mesh.c  mesh.h  octree.c  octree.h
structure/global/: dynamics.c  dynamics.h  engine.c  engine.h  engine_timer.h  fix.c  fix.h  lvl.h  stdgame.c  stdgame.h  superobject_links.h
structure/math/: matrix3.h  matrix4.c  matrix4.h  ray.h  transform.c  transform.h  vector3.c  vector3.h  vector4.c  vector4.h
structure/object/: actor.c  actor.h  physical_object.c  physical_object.h  superobject.c  superobject.h
video/: graphics.cc  graphics.hh  mesh.cc  mesh.hh  video.cc  video.hh
video/2d/: ai.cc  bruteforce.cc  cinematic.cc  common.cc  configuration.cc  dynamics.cc  explorer.cc  game.cc  gui.cc  gui.hh  hierarchy.cc  marker.cc  memoryEditor.cc  menubar.cc  new-run.cc  superobject.cc
video/2d/implot/: implot_internal.h
video/3d/: main.metal  metal.mm  metal2.mm
video/gui/: bruteforce.cc  cinematic.cc  dynamics.cc  gui.cc  gui.hh  hierarchy.cc  memoryEditor.cc  menubar.cc  movieinput.cc  popup.cc  rng.cc  script.cc  superobject.cc
video/gui/imgui/: imconfig.h
video/gui/old/: 3d-info.cc  ai.cc  bits.cc  dsg.cc  dynamics.cc  geometry-display.cc  gui.cc  hierarchy.cc  inputstructure.cc  object-types.cc  recording-tool.cc  route.cc  script.cc  superobject-actions.cc  superobject.cc  type.cc
video/metal/: metal.mm
